Edit usth.jpeg to run properly since I put it in img folder

--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@
     \thispagestyle{empty}
     \centering
 
-    \includegraphics[width=0.3\linewidth]{usth.jpg}
+    \includegraphics[width=0.3\linewidth]{img/usth.jpg}
 
     \vspace{2cm}
     
