Add Use Case Description

--- a/main.tex
+++ b/main.tex
@@ -97,6 +97,7 @@
 
 \section{Desktop Application}
 \subsection{Architecture Overview}
+\subsection{Use Case Description} 
 \subsection{Core Data Structures}
 
 \subsection{Functional Modules}
