Try to compile with small tex files

--- a/main.tex
+++ b/main.tex
@@ -65,18 +65,19 @@
 \newpage
 \section{Acknowledgements}
 \section{Abstract}
+
 \section{Introduction}
-
+\input{sections/introduction}
 \section{Motivation}
-
+\input{sections/motivation}
 \section{Literature Review}
 
 \section{Methodology}
 \subsection{Dataset}
-
+\input{sections/subsections/dataset}
 \subsection{Bubble Segmentation}
 \subsubsection{Data Preparation}
-
+\input{sections/subsubsections/data-preparation-bubble-seg}
 \subsubsection{YOLO Segmentation architecture}
 \subsubsection{Model Training}
 \subsubsection{Post-processing for speech bubbles}
