Add references of applications

--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,28 @@
     year={2017}
 }
 
+@misc{manga_translator,
+  author = {Manga Translator Team},
+  title= {Manga Translator},
+  howpublished = {\url{https://www.mangatranslate.com/#faq}},
+}
+
+@misc{comic_translate,
+  author = {Comic Translate Team},
+  title= {Comic Translate},
+  year = {2024},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/ogkalu2/comic-translate}},
+}
+
+@misc{mantra_engine,
+  author = {Mantra Engine Team},
+  title  = {Mantra - Manga Translator},
+  howpublished = {Mobile application, Google Play},
+  note   = {Accessed: Dec. 2025}
+}
+
 @inproceedings{xie2025advancing,
       title={Advancing Manga Analysis: Comprehensive Segmentation Annotations for the Manga109 Dataset}, 
       author={Minshan Xie, Jian Lin, Hanyuan Liu, Chengze Li, and Tien-Tsin Wong},
