Update content from typst version

--- a/sections/motivation.tex
+++ b/sections/motivation.tex
@@ -1,7 +1,7 @@
-Applying deep learning models and computer vision techniques to manga translation has become a popular topic in academic research. However, practical applications for manga translation are limited and still present several drawbacks for professional translators. Manga Translator, Comic Translate, and Mantra Engine are representative applications developed for manga translation, corresponding respectively to web, desktop, and mobile platforms.
+Applying deep learning models and computer vision techniques to manga translation has become a popular topic in academic research. However, practical applications for manga translation are limited and still present several drawbacks for professional translators. Manga Translator \cite{manga_translator}, Comic Translate \cite{comic_translate}, and Mantra Engine \cite{mantra_engine} are representative applications developed for manga translation, corresponding respectively to web, desktop, and mobile platforms.
 
 All of these applications offer fast processing with real-time or near–real-time performance, making them suitable for personal use or beginners. Some systems also allow users to select different translation models or support multiple languages, font styles, and image formats. Nevertheless, they share a critical limitation: none of them provide an editing function for the translated text.
 
-In addition, Comic Translate requires users to obtain and configure their own API keys, which can be challenging for non-technical users. The mobile platform, Mantra Engine, produces visually unrefined text overlays that often exceed the boundaries of speech bubbles, negatively affecting readability and aesthetic quality.
+In addition, Comic Translate \cite{comic_translate} requires users to obtain and configure their own API keys, which can be challenging for non-technical users. The mobile platform, Mantra Engine \cite{mantra_engine}, produces visually unrefined text overlays that often exceed the boundaries of speech bubbles, negatively affecting readability and aesthetic quality.
 
 Therefore, our motivation is to develop a platform specifically designed for professional manga translators that provides editing functionality at each stage of the manga translation pipeline. Rather than fully replacing human translators, the application aims to support and enhance manual translation workflows by integrating existing deep learning models and computer vision techniques.
