--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,31 @@
+@inproceedings{rigaud2017textindependent,
+  author    = {Christophe Rigaud and Jean-Christophe Burie and Jean-Marc Ogier},
+  title     = {Text-Independent Speech Balloon Segmentation for Comics and Manga},
+  booktitle = {International Workshop on Graphics Recognition},
+  year      = {2017},
+  publisher = {Springer, Lecture Notes in Computer Science},
+  doi       = {10.1007/978-3-319-52159-6\_10}
+}
+
+@inproceedings{dubray2019deepcnn,
+  author    = {David Dubray and Jochen Laubrock},
+  title     = {Deep CNN‑Based Speech Balloon Detection and Segmentation for Comic Books},
+  booktitle = {2019 International Conference on Document Analysis and Recognition (ICDAR)},
+  year      = {2019},
+  pages     = {1237--1243},
+  doi       = {10.1109/ICDAR.2019.00200}
+}
+
+@inproceedings{melistas2021deep,
+  author    = {Thomas Melistas and Giannis Siglidis and Fivos Kalogiannis and Ilan Manouach},
+  title     = {A Deep Learning Pipeline for the Synthesis of Graphic Novels},
+  booktitle = {Proceedings of the 12th International Conference on Computational Creativity (ICCC)},
+  year      = {2021},
+  pages     = {256--265},
+  address   = {México City, Mexico},
+  publisher = {Association for Computational Creativity}
+}
+
 @article{multimedia_aizawa_2020,
     author={Kiyoharu Aizawa and Azuma Fujimoto and Atsushi Otsubo and Toru Ogawa and Yusuke Matsui and Koki Tsubota and Hikaru Ikuta},
     title={Building a Manga Dataset ``Manga109'' with Annotations for Multimedia Applications},
@@ -40,13 +68,6 @@
   title  = {Mantra - Manga Translator},
   howpublished = {Mobile application, Google Play},
   note   = {Accessed: Dec. 2025}
-}
-
-@inproceedings{xie2025advancing,
-      title={Advancing Manga Analysis: Comprehensive Segmentation Annotations for the Manga109 Dataset}, 
-      author={Minshan Xie, Jian Lin, Hanyuan Liu, Chengze Li, and Tien-Tsin Wong},
-      booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-      year={2025},
 }
 
 @misc{manga_ocr_repo,
