add desktop application section

--- a/main.tex
+++ b/main.tex
@@ -124,17 +124,33 @@
 \subsection{Translation}
 
 \section{Desktop Application}
+\input{sections/desktop-application.tex}
+
 \subsection{Architecture Overview}
+\input{sections/subsections/architecture-overview.tex}
+
 \subsection{Use Case Description} 
+
 \subsection{Core Data Structures}
+\input{sections/subsections/core-data-structures.tex}
 
 \subsection{Functional Modules}
+\input{sections/subsections/functional-modules.tex}
+
 \subsubsection{Segmentation Module}
+\input{sections/subsubsections/segmentation-module.tex}
+
 \subsubsection{OCR Module}
+\input{sections/subsubsections/ocr-module.tex}
+
 \subsubsection{Machine Translation Module}
+\input{sections/subsubsections/machine-translation-module.tex}
+
 \subsubsection{Typesetting Module}
+\input{sections/subsubsections/typesetting-module.tex}
 
 \subsection{Exception Handling}
+\input{sections/subsections/exception-handling.tex}
 
 \section{Limitations and Future Works}
 \section{Conclusion}
