--- a/references.bib
+++ b/references.bib
@@ -110,3 +110,73 @@
   pages={8440--8451},
   year={2020}
 }
+
+@inproceedings{10533619,
+  author={Varghese, Rejin and M., Sambath},
+  booktitle={2024 International Conference on Advances in Data Engineering and Intelligent Computing Systems (ADICS)}, 
+  title={YOLOv8: A Novel Object Detection Algorithm with Enhanced Performance and Robustness}, 
+  year={2024},
+  pages={1-6},
+  doi={10.1109/ADICS58448.2024.10533619}}
+
+@misc{yolo11_ultralytics,
+  author = {Glenn Jocher and Jing Qiu},
+  title  = {Ultralytics YOLO11},
+  year   = {2024},
+  howpublished = {\url{https://github.com/ultralytics/ultralytics}}
+}
+
+
+@inproceedings{9150780,
+  author={Wang, Chien-Yao and Mark Liao, Hong-Yuan and Wu, Yueh-Hua and Chen, Ping-Yang and Hsieh, Jun-Wei and Yeh, I-Hau},
+  booktitle={2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW)}, 
+  title={CSPNet: A New Backbone that can Enhance Learning Capability of CNN}, 
+  year={2020},
+  pages={1571-1580},
+  doi={10.1109/CVPRW50498.2020.00203}}
+
+
+@misc{wang2022designingnetwork,
+      title={Designing Network Design Strategies Through Gradient Path Analysis}, 
+      author={Chien-Yao Wang and Hong-Yuan Mark Liao and I-Hau Yeh},
+      year={2022},
+      eprint={2211.04800},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2211.04800}, 
+}
+
+@inproceedings{8579011,
+  author={Liu, Shu and Qi, Lu and Qin, Haifang and Shi, Jianping and Jia, Jiaya},
+  booktitle={2018 IEEE/CVF Conference on Computer Vision and Pattern Recognition}, 
+  title={Path Aggregation Network for Instance Segmentation}, 
+  year={2018},
+  pages={8759-8768},
+  doi={10.1109/CVPR.2018.00913}}
+
+
+@inproceedings{8099589,
+  author={Lin, Tsung-Yi and Dollár, Piotr and Girshick, Ross and He, Kaiming and Hariharan, Bharath and Belongie, Serge},
+  booktitle={2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
+  title={Feature Pyramid Networks for Object Detection}, 
+  year={2017},
+  pages={936-944},
+  doi={10.1109/CVPR.2017.106}}
+
+@misc{ge2021yoloxexceedingyoloseries,
+      title={YOLOX: Exceeding YOLO Series in 2021}, 
+      author={Zheng Ge and Songtao Liu and Feng Wang and Zeming Li and Jian Sun},
+      year={2021},
+      eprint={2107.08430},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2107.08430}, 
+}
+
+@inproceedings{9010373,
+  author={Bolya, Daniel and Zhou, Chong and Xiao, Fanyi and Lee, Yong Jae},
+  booktitle={2019 IEEE/CVF International Conference on Computer Vision (ICCV)}, 
+  title={YOLACT: Real-Time Instance Segmentation}, 
+  year={2019},
+  pages={9156-9165},
+  doi={10.1109/ICCV.2019.00925}}
