Update on subsection OCR

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,15 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{indentfirst}
+\usepackage[utf8]{inputenc}
+\usepackage{textcomp}
+\usepackage[T1]{fontenc}
+\usepackage{CJKutf8}
+\usepackage{booktabs}
+\usepackage{array}
+\usepackage{xcolor}
+\usepackage{colortbl}
+\usepackage{caption}
 \usepackage{lmodern}
 \usepackage{float}
 \usepackage{booktabs}
