--- a/references.bib
+++ b/references.bib
@@ -180,3 +180,13 @@
   year={2019},
   pages={9156-9165},
   doi={10.1109/ICCV.2019.00925}}
+
+@article{hidayatullah2025yolov8_yolo11_review,
+  title        = {YOLOv8 to YOLO11: A Comprehensive Architecture In-depth Comparative Review},
+  author       = {Priyanto Hidayatullah and Nurjannah Syakrani and Muhammad Rizqi Sholahuddin and Trisna Gelar and Refdinal Tubagus},
+  journal      = {arXiv preprint},
+  year         = {2025},
+  volume       = {abs/2501.13400},
+  url          = {https://arxiv.org/abs/2501.13400},
+  note         = {Preprint},
+}
