--- a/sections/subsubsections/yolo-architecture.tex
+++ b/sections/subsubsections/yolo-architecture.tex
@@ -21,7 +21,7 @@ The architectures of the C2PSA module, the attention block in YOLOv11, the C2f m
         \includegraphics[width=0.7\linewidth]{img/PSABlock.png}
         \caption{Attention block (YOLOv11)}
     \end{subfigure}
-    \caption{Architecture of PSA-based modules: (a) C2PSA module; (b) attention block used in YOLOv11.}
+    \caption{Architecture of PSA-based modules: (a) C2PSA module; (b) Attention block used in YOLOv11 \cite{hidayatullah2025yolov8_yolo11_review}}
     \label{fig:c2psa_psablock}
 \end{figure}
 
@@ -39,7 +39,7 @@ The architectures of the C2PSA module, the attention block in YOLOv11, the C2f m
         \includegraphics[width=0.7\linewidth]{img/C3k2.png}
         \caption{C3k2 module (YOLOv11)}
     \end{subfigure}
-    \caption{Comparison of backbone modules: (a) C2f module; (b) C3k2 module adopted in YOLOv11.}
+    \caption{Comparison of backbone modules: (a) C2f module; (b) C3k2 module adopted in YOLOv11 \cite{hidayatullah2025yolov8_yolo11_review}}
     \label{fig:c2f_c3k2}
 \end{figure}
 
