--- a/sections/subsubsections/post-yolo.tex
+++ b/sections/subsubsections/post-yolo.tex
@@ -4,7 +4,7 @@ To address this, we introduce a post-processing step that leverages convexity de
 
 Our algorithm proceeds as follows: for each mask returned by YOLO we extract the largest external contour, compute its convex hull and identify convexity defects—points where the contour deviates markedly from its convex envelope—retaining only those that are both deep and angularly valid to suppress noise, then merge nearby defects to avoid over-segmentation; subsequently we draw a straight line between the closest pair of defects if at least two valid ones remain, whereas if only a single valid defect exists we skip the cut entirely since one defect alone does not furnish sufficient geometric evidence for a reliable split, and the entire process is applied recursively to each resulting sub-mask up to a predefined depth to handle more complex multi-bubble clusters.
 
-\begin{algorithm}
+\begin{algorithm}[H]
 \caption{Split Merged Speech Bubbles Using Convexity Defects (Conservative)}
 \begin{algorithmic}[1]
 \Procedure{SplitBubbles}{$mask$, $depth$}
