add ocr evaluation(#7)

--- a/main.tex
+++ b/main.tex
@@ -155,6 +155,8 @@
 \input{sections/subsections/bubble-seg-res.tex}
 
 \subsection{OCR}
+\input{sections/subsections/ocr-results.tex}
+
 \subsection{Translation}
 
 \section{Desktop Application}
