--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,16 @@
+@inproceedings{zhou2021niutrans,
+  title     = {The NiuTrans Machine Translation Systems for WMT21},
+  author    = {Zhou, Shuhan and Zhou, Tao and Wei, Binghao and Luo, Yingfeng and Mu, Yongyu and Zhou, Zefan and Wang, Chenglong and Zhou, Xuanjun and Lv, Chuanhao and Jing, Yi and Wang, Laohu and Zhang, Jingnan and Huang, Canan and Yan, Zhongxiang and Hu, Chi and Li, Bei and Xiao, Tong and Zhu, Jingbo},
+  booktitle = {Proceedings of the Sixth Conference on Machine Translation (WMT)},
+  pages     = {265--272},
+  year      = {2021},
+  address   = {Online},
+  publisher = {Association for Computational Linguistics}
+}
+
+
+
+
 @inproceedings{rigaud2017textindependent,
   author    = {Christophe Rigaud and Jean-Christophe Burie and Jean-Marc Ogier},
   title     = {Text-Independent Speech Balloon Segmentation for Comics and Manga},
