Add nlp metrics

--- a/main.tex
+++ b/main.tex
@@ -149,6 +149,7 @@
 \input{sections/subsubsections/segmentation-eval-met}
 
 \subsubsection{NLP metrics}
+\input{sections/subsubsections/nlp-metrics}
 
 \section{Results and Evaluation}
 \subsection{Bubble Segmentation}
