Update on the translation part

--- a/main.tex
+++ b/main.tex
@@ -143,6 +143,14 @@
 \input{sections/subsubsections/ocr-postproc}
 
 \subsection{Translation}
+\input{sections/subsections/translation}
+
+\subsubsection{Model architecture}
+\input{sections/subsubsections/translation-arch}
+
+\subsubsection{Model variants}
+\input{sections/subsubsections/translation-variants}
+
 
 \subsection{Evaluation metrics}
 \subsubsection{Segmentation}
