--- a/references.bib
+++ b/references.bib
@@ -1,15 +1,3 @@
-@inproceedings{zhou2021niutrans,
-  title     = {The NiuTrans Machine Translation Systems for WMT21},
-  author    = {Zhou, Shuhan and Zhou, Tao and Wei, Binghao and Luo, Yingfeng and Mu, Yongyu and Zhou, Zefan and Wang, Chenglong and Zhou, Xuanjun and Lv, Chuanhao and Jing, Yi and Wang, Laohu and Zhang, Jingnan and Huang, Canan and Yan, Zhongxiang and Hu, Chi and Li, Bei and Xiao, Tong and Zhu, Jingbo},
-  booktitle = {Proceedings of the Sixth Conference on Machine Translation (WMT)},
-  pages     = {265--272},
-  year      = {2021},
-  address   = {Online},
-  publisher = {Association for Computational Linguistics}
-}
-
-
-
 
 @inproceedings{rigaud2017textindependent,
   author    = {Christophe Rigaud and Jean-Christophe Burie and Jean-Marc Ogier},
@@ -203,3 +191,40 @@
   url          = {https://arxiv.org/abs/2501.13400},
   note         = {Preprint},
 }
+
+@misc{junczysdowmunt2018marian,
+      title={Marian: Fast Neural Machine Translation in C++}, 
+      author={Marcin Junczys-Dowmunt and Roman Grundkiewicz and Tomasz Dwojak and Hieu Hoang and Kenneth Heafield and Tom Neckermann and Frank Seide and Ulrich Germann and Alham Fikri Aji and Nikolay Bogoychev and André F. T. Martins and Alexandra Birch},
+      year={2018},
+      eprint={1804.00344},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/1804.00344}, 
+}
+
+@inproceedings{vaswani2017attention,
+  author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  booktitle = {Advances in Neural Information Processing Systems},
+  editor    = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+  pages     = {5998--6008},
+  publisher = {Curran Associates, Inc.},
+  title     = {Attention is All you Need},
+  volume    = {30},
+  year      = {2017},
+  url       = {https://proceedings.neurips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf}
+}
+
+@inproceedings{kudo-richardson-2018-sentencepiece,
+    title = "{S}entence{P}iece: A simple and language independent subword tokenizer and detokenizer for Neural Text Processing",
+    author = "Kudo, Taku  and
+      Richardson, John",
+    editor = "Blanco, Eduardo  and
+      Lu, Wei",
+    booktitle = "Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing: System Demonstrations",
+    month = nov,
+    year = "2018",
+    address = "Brussels, Belgium",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/D18-2012/",
+    doi = "10.18653/v1/D18-2012",
+    pages = "66--71"}
